--- a/src/app/shared/body/body.component.html
+++ b/src/app/shared/body/body.component.html
@@ -152,9 +152,9 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="menu-flters">
               <li data-filter="*" class="filter-active">Show All</li>
-              <li data-filter=".filter-starters">Starters</li>
-              <li data-filter=".filter-salads">Salads</li>
-              <li data-filter=".filter-specialty">Specialty</li>
+              <li data-filter=".filter-starters">Entradas</li>
+              <li data-filter=".filter-salads">Menu</li>
+              <li data-filter=".filter-specialty">Especialidad</li>
             </ul>
           </div>
         </div>
@@ -163,46 +163,46 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="#">Lobster Bisque</a><span>$5.95</span>
+              <a href="#">Mazamorra</a><span>S/5.00</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Exquisita mazamorra con leche
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
-              <a href="#">Bread barrel</a><span>$6.95</span>
+              <a href="#">Humita</a><span>S/3.00</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Rica Humita recien salida del horno
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="#">Crab Cake</a><span>$7.95</span>
+              <a href="#">Sopa de casa</a><span>S/3.00</span>
             </div>
             <div class="menu-ingredients">
-              A delicate crab cake served on a toasted roll with lettuce and tartar sauce
+              Rica sopa de casa
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#">Caesar Selections</a><span>$8.95</span>
+              <a href="#">Pachamanca</a><span>S/30.00</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Chancho + cordero + pollo + papa + camote + habas + humitas + ensalada
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
-              <a href="#">Tuscan Grilled</a><span>$9.95</span>
+              <a href="#">Cuy Picante</a><span>S/30.00</span>
             </div>
             <div class="menu-ingredients">
-              Grilled chicken with provolone, artichoke hearts, and roasted red pesto
+              cuy + papa + crema de mani + arroz blanco + ensalada
             </div>
           </div>
 
@@ -217,10 +217,10 @@
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#">Greek Salad</a><span>$9.95</span>
+              <a href="#">Trucha Frita</a><span>$9.95</span>
             </div>
             <div class="menu-ingredients">
-              Fresh spinach, crisp romaine, tomatoes, and Greek olives
+              Trucha + arroz blanco + choclo + queso + papa + ensalada
             </div>
           </div>
 
