--- a/src/app/shared/body/body.component.html
+++ b/src/app/shared/body/body.component.html
@@ -458,24 +458,24 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/abastecimiento.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/abastecimiento.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/abastecimiento.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/abastecimiento.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/empleados.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/empleados.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/empleados.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/empleados.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/mirador.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/mirador.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/mirador.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/mirador.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
