--- a/src/app/shared/body/body.component.html
+++ b/src/app/shared/body/body.component.html
@@ -20,34 +20,7 @@
             </div>
           </div>
 
-          <!-- Slide 2 -->
-          <div class="carousel-item" style="background: url(assets/img/slide/slide-2.jpg);">
-            <div class="carousel-container">
-              <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
-                <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-                <div>
-                  <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Our Menu</a>
-                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Book a Table</a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Slide 3 -->
-          <div class="carousel-item" style="background: url(assets/img/slide/slide-3.jpg);">
-            <div class="carousel-background"><img src="assets/img/slide/slide-3.jpg" alt=""></div>
-            <div class="carousel-container">
-              <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown">Sequi ea ut et est quaerat</h2>
-                <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-                <div>
-                  <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Our Menu</a>
-                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Book a Table</a>
-                </div>
-              </div>
-            </div>
-          </div>
+          
 
         </div>
 
@@ -151,10 +124,11 @@
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="menu-flters">
-              <li data-filter="*" class="filter-active">Show All</li>
+              <li data-filter="*" class="filter-active">Todos los Platos</li>
               <li data-filter=".filter-starters">Entradas</li>
               <li data-filter=".filter-salads">Menu</li>
               <li data-filter=".filter-specialty">Especialidad</li>
+              <li data-filter=".filter-bebidas">Bebidas</li>
             </ul>
           </div>
         </div>
@@ -163,86 +137,207 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="#">Mazamorra</a><span>S/5.00</span>
+              <a href="#">CAUSA</a><span></span>
             </div>
             <div class="menu-ingredients">
-              Exquisita mazamorra con leche
+              Papa amarilla + huevo cocido + aceitunas + relleno de pollo/atún 
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
-              <a href="#">Humita</a><span>S/3.00</span>
+              <a href="#">TRUCHA FRITA</a><span></span>
             </div>
             <div class="menu-ingredients">
-              Rica Humita recien salida del horno
+            </div>
+          </div>
+
+
+          <div class="col-lg-6 menu-item filter-specialty">
+            <div class="menu-content">
+              <a href="#">PACHAMANCA </a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+
+           <div class="col-lg-6 menu-item filter-specialty">
+            <div class="menu-content">
+              <a href="#">CUY PICANTE </a><span></span>
+            </div>
+            <div class="menu-ingredients">
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="#">Sopa de casa</a><span>S/3.00</span>
+              <a href="#">OCOPA</a><span></span>
             </div>
             <div class="menu-ingredients">
-              Rica sopa de casa
+              Lechuga + salsa de huacatay + papa + huevo cocido + aceitunas 
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#">Pachamanca</a><span>S/30.00</span>
+              <a href="#">ADOBO DE CHANCHO</a><span></span>
             </div>
             <div class="menu-ingredients">
-              Chancho + cordero + pollo + papa + camote + habas + humitas + ensalada
+            </div>
+          </div>
+           <div class="col-lg-6 menu-item filter-salads">
+            <div class="menu-content">
+              <a href="#">ARROZ CON POLLO</a><span></span>
+            </div>
+            <div class="menu-ingredients">
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
-              <a href="#">Cuy Picante</a><span>S/30.00</span>
+              <a href="#">CHANCHO AL PALO</a><span></span>
             </div>
             <div class="menu-ingredients">
-              cuy + papa + crema de mani + arroz blanco + ensalada
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-specialty">
+            <div class="menu-content">
+              <a href="#">CALDO DE GALLINA</a><span></span>
+            </div>
+            <div class="menu-ingredients">
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="#">Mozzarella Stick</a><span>$4.95</span>
+              <a href="#">HUANCAINA</a><span></span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Lechuga + salsa de ají + papa + huevo cocido + aceitunas 
+            </div>
+          </div>
+
+           <div class="col-lg-6 menu-item filter-starters">
+            <div class="menu-content">
+              <a href="#">ENSALADA</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-starters">
+            <div class="menu-content">
+              <a href="#">SOPA DE CASA</a><span></span>
+            </div>
+            <div class="menu-ingredients">
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#">Trucha Frita</a><span>$9.95</span>
+              <a href="#">TALLARINES ROJOS</a><span></span>
             </div>
             <div class="menu-ingredients">
-              Trucha + arroz blanco + choclo + queso + papa + ensalada
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#">Spinach Salad</a><span>$9.95</span>
+              <a href="#">POLLO AL MANI</a><span></span>
             </div>
             <div class="menu-ingredients">
-              Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-salads">
+            <div class="menu-content">
+              <a href="#">ESTADO DE POLLO/RES/CORDERO</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+           <div class="col-lg-6 menu-item filter-salads">
+            <div class="menu-content">
+              <a href="#">SECO DE POLLO/RES/CORDERO</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-salads">
+            <div class="menu-content">
+              <a href="#">ESCABECHE DE POLLO</a><span></span>
+            </div>
+            <div class="menu-ingredients">
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
-              <a href="#">Lobster Roll</a><span>$12.95</span>
+              <a href="#">LOMO SALTADO</a><span></span>
             </div>
             <div class="menu-ingredients">
-              Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll
             </div>
           </div>
 
+
+          <div class="col-lg-6 menu-item filter-specialty">
+            <div class="menu-content">
+              <a href="#">SALTADO DE POLLO</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+           <div class="col-lg-6 menu-item filter-specialty">
+            <div class="menu-content">
+              <a href="#">ARROZ CHAUFA</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+           
+           <div class="col-lg-6 menu-item filter-specialty">
+            <div class="menu-content">
+              <a href="#">CAJA CHINA</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-bebidas">
+            <div class="menu-content">
+              <a href="#">GASEOSAS</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-bebidas">
+            <div class="menu-content">
+              <a href="#">CERVEZAS</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-bebidas">
+            <div class="menu-content">
+              <a href="#">CHICHA DE JORA</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-bebidas">
+            <div class="menu-content">
+              <a href="#">CHICHA MORADA</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
         </div>
+
+        <div class="col-lg-6 menu-item filter-bebidas">
+            <div class="menu-content">
+              <a href="#">LIMONADA</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
 
       </div>
     </section><!-- End Menu Section -->
@@ -482,32 +577,32 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-4.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-4.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/mesa_mirador.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/mesa_mirador.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-5.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-5.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/mesas.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/mesas.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-6.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-6.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/mirador_1.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/mirador_1.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-7.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-7.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/restaurante_interno.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/restaurante_interno.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
