--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <section id="topbar" class="d-flex align-items-center fixed-top topbar-transparent">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-center justify-content-lg-start">
-      <i class="bi bi-phone d-flex align-items-center" href="https://wa.link/4z9j2l"><span>+51 946 125 567 </span></i>
-      <i class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>Mon-Sat: 07:00 AM - 10:00 PM</span></i>
+      <a class="bi bi-phone d-flex align-items-center" href="https://wa.link/4z9j2l" target="_blank"><span>+51 946 125 567 </span></a>
+      <a class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>Mon-Sat: 07:00 AM - 10:00 PM</span></a>
     </div>
   </section>
 
