--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,9 +2,10 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <div class="logo me-auto">
-        <h1><a href="index.html">Restaurante Turistico Carpapata</a></h1>
+
+         <!-- <h1><a href="index.html">Restaurante Turistico Carpapata</a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <a href="index.html"><img src="assets/img/045.png"  alt=""></a>
       </div>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
