--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,35 @@
-<section id="topbar" class="d-flex align-items-center fixed-top topbar-transparent">
+<section id="topbar" class="d-flex align-items-center topbar-transparent">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-center justify-content-lg-start">
       <a class="bi bi-phone d-flex align-items-center" href="https://wa.link/4z9j2l" target="_blank"><span>+51 946 125 567 </span></a>
-      <a class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>Mon-Sat: 07:00 AM - 10:00 PM</span></a>
+      <a class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>LUNES-SÁBADO: 07:00 AM - 10:00 PM</span></a>
     </div>
   </section>
+<header id="header" class="d-flex align-items-center header-transparent">
+    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
+      <div class="logo me-auto">
+
+         <!-- <h1><a href="index.html">Restaurante Turistico Carpapata</a></h1> -->
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <a href="index.html"><img src="assets/img/045.png"  alt=""></a>
+      </div>
+
+  <nav id="navbar" class="navbar order-last order-lg-0">
+        <ul>
+          <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
+          <li><a class="nav-link scrollto" href="#about">Sobre Nosotros</a></li>
+          <li><a class="nav-link scrollto" href="#menu">Menu</a></li>
+          <li><a class="nav-link scrollto" href="#specials">Especialidades</a></li>
+          <li><a class="nav-link scrollto" href="#events">Lugares Turisticos</a></li>
+          <li><a class="nav-link scrollto" href="#chefs">Protocolos de Seguridad</a></li>
+          <li><a class="nav-link scrollto" href="#gallery">Fotos</a></li>
+         
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+    </div>
+  </header><!-- End Header -->
 <app-header></app-header>
 <app-body></app-body>
 <app-footer></app-footer>
