--- a/src/app/shared/body/body.component.html
+++ b/src/app/shared/body/body.component.html
@@ -10,7 +10,7 @@
           <div class="carousel-item active" style="background: url(assets/img/fondo.jpeg);">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown"><span>El mejor restaurante</span>  turistico de Junin</h2>
+                <h2 class="animate__animated animate__fadeInDown"><span>El secreto está en la mesa...</span></h2>
                 <p class="animate__animated animate__fadeInUp">Bienvenido a nuestro RESTAURANTE TURISTICO CARPAPATA, un acogedor espacio ubicado en el mirador y punto central del Perú, donde podrás descubrir un ambiente selecto y cercano impregnado de la auténtica esencia natural.</p>
                 <div>
                   <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Nuestro Menu</a>
