--- a/src/app/shared/body/body.component.html
+++ b/src/app/shared/body/body.component.html
@@ -73,45 +73,7 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Whu Us Section ======= -->
-    <section id="why-us" class="why-us">
-      <div class="container">
 
-        <div class="section-title">
-          <h2>La razon por el cual buscan<span>Nuestro Restaurante</span></h2>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
-        </div>
-
-        <div class="row">
-
-          <div class="col-lg-4">
-            <div class="box">
-              <span>01</span>
-              <h4>Calidad</h4>
-              <p>Come rico sin preocuparte de nada</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mt-4 mt-lg-0">
-            <div class="box">
-              <span>02</span>
-              <h4>Confianza</h4>
-              <p>te sientes como en casat</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mt-4 mt-lg-0">
-            <div class="box">
-              <span>03</span>
-              <h4> Delicioso</h4>
-              <p>Los mas ricos potajes solo los probarás acá</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Whu Us Section -->
 
     <!-- ======= Menu Section ======= -->
     <section id="menu" class="menu">
@@ -493,6 +455,35 @@
       </div>
     </section><!-- End Specials Section -->
 
+
+    <!-- ======= Whu Us Section ======= -->
+     <!-- ======= About Section ======= -->
+    <section id="eventos" class="about">
+      <div class="container-fluid">
+
+        <div class="row">
+
+          <div class="col-lg-5 align-items-stretch video-box" style='background-image: url("assets/img/gallery/mesa_mirador.jpeg");'>
+            <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a> -->
+          </div>
+
+          <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch">
+
+            <div class="content">
+              <h3><strong>Eventos</strong></h3>
+              <p>
+                En Restaurante Turístico Carpapata, ponemos a tu disposición nuestro amplio salón de recepción para hacer de tu evento el mejor momento para recordar tus fechas más importantes, ven y celebra con nosotros tu cumpleaños, bautizo, almuerzos corporativos, fiesta de promoción, aniversario, etc. Disfruta de la maravillosa vista y nuestro servicio de catering.
+              </p>
+        
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End About Section -->
+
 <section id="events" class="events">
       <div class="container">
 
@@ -518,7 +509,7 @@
 <br>
         <div class="row event-item">
           <div class="col-lg-6">
-            <img src="assets/img/gallery/rio.jpg" class="img-fluid" alt="">
+            <img src="assets/img/gallery/acceso_rio.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content">
             <h3>ACCESO AL RIO</h3>
@@ -534,10 +525,10 @@
 <br>
         <div class="row event-item">
           <div class="col-lg-6">
-            <img src="assets/img/gallery/rio.jpg" class="img-fluid" alt="">
+            <img src="assets/img/gallery/instalacion_1.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content">
-            <h3>INSTALACION DE MINA</h3>
+            <h3>INSTALACION</h3>
             <div class="price">
               <p><span></span></p>
             </div>
