--- a/src/app/shared/body/body.component.html
+++ b/src/app/shared/body/body.component.html
@@ -651,6 +651,50 @@ En Carpapata los  cielos son despejados, por ello podrás gozar de una vista ún
             </div>
           </div>
 
+            <div class="col-lg-3 col-md-4">
+            <div class="gallery-item">
+              <a href="assets/img/gallery/presa1.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/presa1.jpeg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+
+            <div class="col-lg-3 col-md-4">
+            <div class="gallery-item">
+              <a href="assets/img/gallery/presa2.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/presa2.jpeg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+
+            <div class="col-lg-3 col-md-4">
+            <div class="gallery-item">
+              <a href="assets/img/gallery/presa3.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/presa3.jpeg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+
+            <div class="col-lg-3 col-md-4">
+            <div class="gallery-item">
+              <a href="assets/img/gallery/presa4.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/presa4.jpeg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+
+            <div class="col-lg-3 col-md-4">
+            <div class="gallery-item">
+              <a href="assets/img/gallery/presa5.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/presa5.jpeg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
              <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
               <a href="assets/img/gallery/empleados.jpeg" class="gallery-lightbox">
