--- a/src/app/shared/body/body.component.html
+++ b/src/app/shared/body/body.component.html
@@ -13,7 +13,7 @@
                 <h2 class="animate__animated animate__fadeInDown"><span>El secreto está en la mesa...</span></h2>
                 <p class="animate__animated animate__fadeInUp">Bienvenido a nuestro RESTAURANTE TURISTICO CARPAPATA, un acogedor espacio ubicado en el mirador y punto central del Perú, donde podrás descubrir un ambiente selecto y cercano impregnado de la auténtica esencia natural.</p>
                 <div>
-                  <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Nuestro Menu</a>
+                  <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Nuestro Menú</a>
                   <a href="#events" class="btn-book animate__animated animate__fadeInUp scrollto">Lugares Turisticos</a>
                 </div>
               </div>
@@ -45,13 +45,13 @@
         <div class="row">
 
           <div class="col-lg-5 align-items-stretch video-box" style='background-image: url("assets/img/about.jpg");'>
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+            <a href="https://www.youtube.com/watch?v=anruOfrfnJw" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div>
 
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch">
 
             <div class="content">
-              <h3>La mejor experiencia culinaria la encuentras aqui <strong> restaurante Carpapata</strong></h3>
+              <h3>La mejor experiencia culinaria la encuentras aqui en<strong> restaurante Carpapata</strong></h3>
               <p>
                 Nuestro restaurante es un claro homenaje a la naturaleza. Es por ello que implementamos ambientes exclusivos para que puedas disfrutar de una vista impresionante mientras saborees nuestros platos.
               </p>
@@ -80,7 +80,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Mire nuestro <span>Menu</span></h2>
+          <h2>Mire nuestro <span>Menú</span></h2>
         </div>
 
         <div class="row">
@@ -88,7 +88,7 @@
             <ul id="menu-flters">
               <li data-filter="*" class="filter-active">Todos los Platos</li>
               <li data-filter=".filter-starters">Entradas</li>
-              <li data-filter=".filter-salads">Menu</li>
+              <li data-filter=".filter-salads">Menú</li>
               <li data-filter=".filter-specialty">Especialidad</li>
               <li data-filter=".filter-bebidas">Bebidas</li>
             </ul>
@@ -557,7 +557,7 @@
 <br>
          <div class="row event-item">
           <div class="col-lg-6">
-            <img src="assets/img/gallery/rio.jpg" class="img-fluid" alt="">
+            <img src="assets/img/gallery/observatorio.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content">
             <h3>OBSERVATORIO ASTRONOMICO Y TERRESTRE</h3>
@@ -695,14 +695,13 @@ En Carpapata los  cielos son despejados, por ello podrás gozar de una vista ún
             </div>
           </div>
 
-             <div class="col-lg-3 col-md-4">
+           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/empleados.jpeg" class="gallery-lightbox">
-                <img src="assets/img/gallery/empleados.jpeg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/presa6.jpeg" class="gallery-lightbox">
+                <img src="assets/img/gallery/presa6.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
-
 
         </div>
 
