--- a/src/app/shared/body/body.component.html
+++ b/src/app/shared/body/body.component.html
@@ -541,7 +541,7 @@
 <br>
         <div class="row event-item">
           <div class="col-lg-6">
-            <img src="assets/img/gallery/rio.jpg" class="img-fluid" alt="">
+            <img src="assets/img/gallery/caminos.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content">
             <h3>CAMINOS DEL INCA</h3>
