--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<section id="topbar" class="d-flex align-items-center topbar-transparent">
+<section id="topbar"  class="container-fluid" >
     <div class="container-fluid container-xl d-flex align-items-center justify-content-center justify-content-lg-start">
       <a class="bi bi-phone d-flex align-items-center" href="https://wa.link/4z9j2l" target="_blank"><span>+51 946 125 567 </span></a>
-      <a class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>LUNES-SÁBADO: 07:00 AM - 10:00 PM</span></a>
+      <a class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>LUNES-DOMINGO: 07:00 AM - 10:00 PM</span></a>
     </div>
   </section>
 <header id="header" class="d-flex align-items-center header-transparent">
@@ -19,9 +19,9 @@
           <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
           <li><a class="nav-link scrollto" href="#about">Sobre Nosotros</a></li>
           <li><a class="nav-link scrollto" href="#eventos">Eventos</a></li>
-          <li><a class="nav-link scrollto" href="#menu">Menu</a></li>
+          <li><a class="nav-link scrollto" href="#menu">Menú</a></li>
           <li><a class="nav-link scrollto" href="#specials">Especialidades</a></li>
-          <li><a class="nav-link scrollto" href="#events">Lugares Turisticos</a></li>
+          <li><a class="nav-link scrollto" href="#events">Lugares Turísticos</a></li>
           <li><a class="nav-link scrollto" href="#chefs">Protocolos de Seguridad</a></li>
           <li><a class="nav-link scrollto" href="#gallery">Fotos</a></li>
          
