--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,6 +1,38 @@
 <footer id="footer">
+
+  <div class="container mt-5">
+
+        <div class="info-wrap">
+          <div class="row">
+            <div class="col-lg-3 col-md-6 info">
+              <i class="bi bi-geo-alt"></i>
+              <h4>Ubicación:</h4>
+              <p>Carpapata<br>Avenida Castillo 211</p>
+            </div>
+
+            <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
+              <i class="bi bi-clock"></i>
+              <h4>Atendemos:</h4>
+              <p>Lunes-Domingo:<br>07:00 AM - 10:00 PM</p>
+            </div>
+
+            <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
+              <i class="bi bi-envelope"></i>
+              <h4>Email:</h4>
+              <p>info@example.com<br>contact@example.com</p>
+            </div>
+
+            <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
+              <i class="bi bi-phone"></i>
+              <h4>LLámanos:</h4>
+              <p>+51 946 125 567 </p>
+            </div>
+          </div>
+        </div>        
+      </div>
+
     <div class="container">
-      <h3>Restaurante Turistico Carpapata</h3>
+      <h3>Restaurante Turístico Carpapata</h3>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
