--- a/src/app/shared/body/body.component.html
+++ b/src/app/shared/body/body.component.html
@@ -11,10 +11,10 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown"><span>El secreto está en la mesa...</span></h2>
-                <p class="animate__animated animate__fadeInUp">Bienvenido a nuestro RESTAURANTE TURISTICO CARPAPATA, un acogedor espacio ubicado en el mirador y punto central del Perú, donde podrás descubrir un ambiente selecto y cercano impregnado de la auténtica esencia natural.</p>
+                <p class="animate__animated animate__fadeInUp">Bienvenido a nuestro RESTAURANTE TURÍSTICO CARPAPATA, un acogedor espacio ubicado en el mirador y punto central del Perú, donde podrás descubrir un ambiente selecto y cercano impregnado de la auténtica esencia natural.</p>
                 <div>
                   <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Nuestro Menú</a>
-                  <a href="#events" class="btn-book animate__animated animate__fadeInUp scrollto">Lugares Turisticos</a>
+                  <a href="#events" class="btn-book animate__animated animate__fadeInUp scrollto">Lugares Turísticos</a>
                 </div>
               </div>
             </div>
@@ -51,7 +51,7 @@
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch">
 
             <div class="content">
-              <h3>La mejor experiencia culinaria la encuentras aqui en<strong> restaurante Carpapata</strong></h3>
+              <h3>La mejor experiencia culinaria la encuentras aquí en<strong> Restaurante Carpapata</strong></h3>
               <p>
                 Nuestro restaurante es un claro homenaje a la naturaleza. Es por ello que implementamos ambientes exclusivos para que puedas disfrutar de una vista impresionante mientras saborees nuestros platos.
               </p>
@@ -61,7 +61,7 @@
               <ul>
                 <li><i class="bx bx-check-double"></i> Cumplimos con todos los requisitos para cuidar tu SALUD</li>
                 <li><i class="bx bx-check-double"></i> Tenemos la mejor comida del sector</li>
-                <li><i class="bx bx-check-double"></i> Un lugar calido, hogareño, te sentiras como en casa</li>
+                <li><i class="bx bx-check-double"></i> Un lugar cálido, hogareño, te sentiras como en casa</li>
               </ul>
           
             </div>
@@ -488,7 +488,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>LUGARES <span>TURISTICOS</span> CERCA A NUESTRO RESTAURANTE</h2>
+          <h2>LUGARES <span>TURÍSTICOS</span> CERCA A NUESTRO RESTAURANTE</h2>
         </div>
 <br>
         <div class="row event-item">
@@ -528,7 +528,7 @@
             <img src="assets/img/gallery/instalacion_1.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content">
-            <h3>INSTALACION</h3>
+            <h3>INSTALACIÓN</h3>
             <div class="price">
               <p><span></span></p>
             </div>
@@ -560,7 +560,7 @@
             <img src="assets/img/gallery/observatorio.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content">
-            <h3>OBSERVATORIO ASTRONOMICO Y TERRESTRE</h3>
+            <h3>OBSERVATORIO ASTRONÓMICO Y TERRESTRE</h3>
             <div class="price">
               <p><span></span></p>
             </div>
@@ -721,27 +721,23 @@ En Carpapata los  cielos son despejados, por ello podrás gozar de una vista ún
 
           <div class="col-lg-4 col-md-6">
             <div class="member">
-              <div class="member-info">
-                <h4>Asepsia</h4>
-              </div>
+              <h4 style="font-weight: bold;">Asepsia</h4>
               <span>Todos los colaboradores pasan por una evaluación y protocolo de prevención diario, antes de ingresar a laborar, tales como la temperatura, limpieza desinfección de ropa y artículos, limpieza de la plantilla de los zapatos y lavados de manos.</span>
             </div>
           </div>
 
          <div class="col-lg-4 col-md-6">
             <div class="member">
-              <div class="member-info">
-                <h4>Nos ceñimos a las normas legales de sanidad</h4>
-              </div>
+              
+              <h4 style="font-weight: bold;">Nos ceñimos a las normas legales de sanidad</h4>
               <span>Todo el personal cuenta con su carnet de sanidad y además cuenta con su uniforme de trabajo especializado para pueda cuidar la inocuidad de los alimentos.</span>
             </div>
           </div>
 
        <div class="col-lg-4 col-md-6">
             <div class="member">
-              <div class="member-info">
-                <h4>Doble Seguridad</h4>
-              </div>
+              
+              <h4 style="font-weight: bold;">Doble Seguridad</h4>
               <span>Cuando se recepcionan los insumos o cualquier artículo, esta es nuevamente desinfectada y manipulada por el personal capacitado.</span>
             </div>
           </div>
@@ -768,36 +764,7 @@ En Carpapata los  cielos son despejados, por ello podrás gozar de una vista ún
         <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4653.329451426192!2d-75.55656995890723!3d-11.263758537223241!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spe!4v1624551216328!5m2!1ses-419!2spe" frameborder="0" allowfullscreen></iframe>
       </div>
 
-      <div class="container mt-5">
-
-        <div class="info-wrap">
-          <div class="row">
-            <div class="col-lg-3 col-md-6 info">
-              <i class="bi bi-geo-alt"></i>
-              <h4>Ubicacion:</h4>
-              <p>Carpapata<br>Avenida Castillo 211</p>
-            </div>
-
-            <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
-              <i class="bi bi-clock"></i>
-              <h4>Atendemos:</h4>
-              <p>Lunes-Sabado:<br>07:00 AM - 23:00 PM</p>
-            </div>
-
-            <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
-              <i class="bi bi-envelope"></i>
-              <h4>Email:</h4>
-              <p>info@example.com<br>contact@example.com</p>
-            </div>
-
-            <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
-              <i class="bi bi-phone"></i>
-              <h4>LLamanos:</h4>
-              <p>+51 946 125 567 </p>
-            </div>
-          </div>
-        </div>        
-      </div>
+      
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
